tdf#119305 Chart created from fully selected sheet only targets header row

regression from
    commit 3acc5a2383f5b0458e3caf1505fe6b8ad7dc3fb0
    tdf#69977 improve creation of large charts

Change-Id: I09d02447b0e4691e98a44222608a3dc5edc95b0b
Reviewed-on: https://gerrit.libreoffice.org/60318
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>